add_subdirectory(ArithIndexToEmitHLS)
add_subdirectory(DfgInsertOlympusWrapper)
add_subdirectory(DfgToAsync)
add_subdirectory(DfgToFunc)
add_subdirectory(DfgToLLVM)
add_subdirectory(DfgToOlympus)
add_subdirectory(DfgToEmitHLS)
add_subdirectory(FuncToDfg)
add_subdirectory(LinalgToDfg)
add_subdirectory(MathToEmitHLS)
add_subdirectory(MemrefToEmitHLS)
add_subdirectory(ScfToEmitHLS)
